test/technotes/doc-examples/LocalStatementHalt.good
LocalStatementHalt.chpl:8: error: Local-on is not local
